# esc-to-caps

./: Cargo.toml  esctocapslock.ahk  readme.md
c/: esc_to_caps.c
rust/src/: main.rs
src/: main.rs
